# portfolio-django

./: .env.example  .gitignore  README.md  aula_templates.md  pyproject.toml
core/: admin.py  context_processors.py  models.py  settings.py  urls.py
core/management/commands/: createsu.py
core/migrations/: 0001_initial.py  0002_personal_delete_pessoal.py  0003_profile_delete_personal.py  0004_alter_profile_url_imagem.py  0005_alter_profile_options_profile_user_and_more.py
core/static/core/css/: styles.css
core/static/core/js/: notifications.js
core/templates/core/: base.html
portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio/static/portfolio/css/: contact.css  home.css  modals.css  projects.css
portfolio/static/portfolio/js/: home.js
portfolio/templates/portfolio/: contact.html  home.html  projects.html  projetos.html
portfolio/urls/: __init__.py  api.py  web.py
portfolio/views/: __init__.py  api.py  site.py
